# Meta

Logic/: Logic.cabal
Logic/src/: Parser.hs
Logic/tests/: arith.l  graphq.l  lam.l  list.l
Meta/: Meta.cabal
Meta/src/: Main.hs  Printer.hs
