cabal-version:       >=1.10

name:                Logic
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple

executable logic
  main-is:             Main.hs
  other-modules:       Parser, Printer
  -- other-extensions:
  build-depends:       base >=4.9 && <4.15,
                       parsec >= 3.1.14

  hs-source-dirs:      src
  default-language:    Haskell2010
